--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'Schools -- Juvenile fiction'
 - !lcsh 'Boarding schools -- England -- Juvenile fiction'
+- GITenberg
 title: 'Digby Heathcote: The Early Days of a Country Gentleman''s Son and Heir'
 url: http://www.gutenberg.org/ebooks/34535
